--- a/packages/ctool-adapter/tauri/src-tauri/tauri.conf.template.json5
+++ b/packages/ctool-adapter/tauri/src-tauri/tauri.conf.template.json5
@@ -69,7 +69,7 @@
                 "fullscreen": false,
                 "height": 650,
                 "resizable": true,
-                "title": "Ctool 程序开发常用工具",
+                "title": "Dtool 程序开发常用工具",
                 "width": 900
             }
         ]
