--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "ctool",
+    "name": "dtool",
     "version": "2.3.0",
     "type": "module",
     "description": "程序开发常用工具 chrome / edge / firefox / utools / windows / linux / mac",
-    "homepage": "https://ctool.dev",
-    "repository": "https://github.com/baiy/Ctool",
-    "author": "baiy",
+    "homepage": "https://w3to.dev",
+    "repository": "https://github.com/ideshun/Dtool",
+    "author": "Deshun",
     "license": "MIT",
     "scripts": {
         "initialize": "pnpm --filter ctool-config run build && pnpm --filter ctool-adapter-base run build && pnpm -r run adapter-build",
